# canim

./: README.md  pyproject.toml
canim/: config.py  typewriter.py  utils.py  writer.py
canim/configs/: production.yaml  prototype.yaml
